--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@reduxjs/toolkit": "^2.0.1",
     "@smastrom/react-rating": "^1.5.0",
     "animate.css": "^4.1.1",
     "express": "^4.18.2",
     "keen-slider": "^6.8.6",
     "lqip": "^2.1.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-player": "^2.14.1",
     "react-redux": "^9.1.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
